Fixed an overflow issue

--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -15,6 +15,7 @@
   }
 
   .details {
+    overflow: hidden;
     .header {
       background-color: black;
       position: relative;
@@ -74,6 +75,8 @@
   }
 
   .details {
+    overflow: hidden;
+
     .header {
       background-color: black;
       position: relative;
@@ -133,6 +136,8 @@
   }
 
   .details {
+    overflow: hidden;
+
     .header {
       background-color: black;
       position: relative;
